--- a/generator.html
+++ b/generator.html
@@ -10,7 +10,7 @@
     для этой части используется generator.css-->
 
 <div class="gen_container" id="gen_cont">
-    <a class="image" href="main.html" cursor:pointer>
+    <a class="image" href="index.html" cursor:pointer>
     <img src="assets/images/logo-main.png" width="120" height="120">
     </a>
     <div class="gen_info">
