--- a/news-university.html
+++ b/news-university.html
@@ -12,7 +12,7 @@
 <body>
 <header class = "header">
 <nav class="navbar navbar-expand-lg">
-<a class="logo" href="main.html" cursor:pointer>
+<a class="logo" href="index.html" cursor:pointer>
 <img src="assets/images/logo-main.png" width="60" height="60">
     </a>
   <div class="collapse navbar-collapse" id="navbarNav">
