--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="dropdown-item" href="generator.html">Generator</a>
             </div>
           </li>
-          <a class="navbar-brand mx-3" href="main.html" cursor:pointer>
+          <a class="navbar-brand mx-3" href="index.html" cursor:pointer>
             <img src="assets/images/logo-main.png" width="120" height="120">
           </a>
           <li class="nav-item mx-3">
