--- a/timetable.html
+++ b/timetable.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     Timetable
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body>
+    <table class="table table-bordered" id="student" width="100%" cellspacing="0">
+        <tr>
+            <th>Course</th>
+            <th>Group</th>
+        </tr>
+    </table>
+    <script src="js/timetable-form.js"></script>
+</body>
+</html>
