--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel = "stylesheet" href="assets/css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">    
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Students webpage</title>
 </head>
 <body>
-<div class="d-flex justify-content-center">
-  <div class="spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-</div>
     <header class = "header d-flex justify-content-center">
     <nav class="navbar bg-transparent navbar-expand-lg navbar-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,32 +17,30 @@
       <div class="collapse navbar-collapse" id="#navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link mx-3" href="about.html">About<span class="sr-only">(current)</span></a>
+            <a class="nav-link mx-3" href="about.html">О сайте<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown mx-3">
-            <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Features
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Полезные функции
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="calculator.html">Calculator</a>
-              <a class="dropdown-item" href="generator.html">Generator</a>
+            <div class="dropdown-menu mx-1" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="calculator.html">Калькулятор</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="generator.html">Генератор</a>
             </div>
           </li>
-          <a class="navbar-brand mx-3" href="index.html" cursor:pointer>
+          <a class="navbar-brand mx-3" href="main.html" cursor:pointer>
             <img src="assets/images/logo-main.png" width="120" height="120">
           </a>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="timetable.html">Timetable</a>
+            <a class="nav-link" href="timetable-form.html">Расписание</a>
           </li>
-          <li class="nav-item mx-3">
-            <div class="dropdown open">
-              <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              News
+          <li class="nav-item dropdown mx-3">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Новости
               </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="news-university.html">University</a>
-              <a class="dropdown-item" href="news-entertainment.html">Entertainment</a>
-            </div>
+            <div class="dropdown-menu news_drop" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="news-university.html">Университетские</a>
             </div>
           </li>
         </ul>
@@ -57,8 +50,8 @@
 <div class="intro">
     <div class="container">
         <h1 class="intro_title">
-            WELCOME TO RTU MIREA <br />
-            <a href="https://www.mirea.ru/" class="btn btn-primary btn-lg" >READ MORE</a>
+            Добро пожаловать <br />
+            <a href="https://www.mirea.ru/" class="btn btn-primary btn-lg" >Официальный сайт РТУ МИРЭА</a>
             </h1>
     </div>
 </div>
